fix backlog when area is unkown (#459)
* fix backlog when area is unkown

* remove duplicated NA areas

* renames area unknown to NA